@@ -1,5 +1,6 @@
 Tethys (Beta)
 =============
 
-Version: 0.2
-Database: demo002.sql
+Version: 0.3
+
+Database: demo001.sql + changes
