@@ -40,6 +40,7 @@ div.innerbody{
 	margin:20px;
 	border-radius:5px;
 	box-shadow:0px 0px 5px #3f6fb7 inset;
+	min-height:500px;
 }
 
 /*==================================================================
@@ -63,12 +64,21 @@ div.mainmenu{
 }
 div.mainmenu a{
 	color:black;
+	background:inherit;
+}
+div.mainmenu a[target=_blank]{
+	background:url('img/core/external-link.png');
+	background-repeat:no-repeat;
+	background-position:right;
+	padding-right:12px;
+}
+div.mainmenu a[target=_blank]:hover{
+	background-image:url('img/core/external-link-red.png');	
 }
 div.mainmenu a:hover,
 div.mainmenu div.menutopic.highlight,
 div.mainmenu div.menutopic.highlight a{
 	color:#cc060e;
-	background:inherit;
 }
 div.mainmenu ul{
 	padding:5px;
@@ -94,6 +104,7 @@ div.mainmenu > ul > li:hover > div.submenulabel + ul{
 
 table{
 	border-collapse:collapse;
+	margin:10px 0px;
 }
 
 table th{
